--- a/src/Resources/assets/scss/base/_typography.scss
+++ b/src/Resources/assets/scss/base/_typography.scss
@@ -6,7 +6,7 @@
 // For the full copyright and license information, please view the LICENSE
 // file that was distributed with this source code.
 
-$body-font-family: 'Open Sans', sans-serif;
+$body-font-family: 'Varela Round', sans-serif;
 
 $font-weight-light: 300;
 $font-weight-medium: 500;
