--- a/src/Resources/assets/scss/base/_colors.scss
+++ b/src/Resources/assets/scss/base/_colors.scss
@@ -6,5 +6,5 @@
 // For the full copyright and license information, please view the LICENSE
 // file that was distributed with this source code.
 
-$color-php: #6082bb;
+$green: #83b66e;
 $white: #fff;
