--- a/src/Resources/views/layout/base.twig
+++ b/src/Resources/views/layout/base.twig
@@ -5,7 +5,7 @@
         <meta charset="{{ site.charset }}"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>{% block title %}{% endblock %}</title>
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
         {% block stylesheet %}
             <link rel="stylesheet" href="/css/app.css" type="text/css"/>
         {% endblock %}
