--- a/src/Resources/views/layout/base.twig
+++ b/src/Resources/views/layout/base.twig
@@ -19,16 +19,14 @@
                         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
                         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-                })(window,document,'script','dataLayer','GTM-53XGWT');</script>
+                })(window,document,'script','dataLayer','GTM-PSKVDC');</script>
             <!-- End Google Tag Manager -->
         {% endblock %}
         {% block body %}
             {% block header %}
-                {% include 'layout/header.twig' %}
             {% endblock %}
             {% block content %}{% endblock %}
             {% block footer %}
-                {% include 'layout/footer.twig' %}
             {% endblock %}
         {% endblock %}
         {% block javascript %}
