--- a/src/Resources/views/layout/base.twig
+++ b/src/Resources/views/layout/base.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <meta charset="{{ site.charset }}"/>
+        <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>{% block title %}{% endblock %}</title>
         <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
