--- a/src/Resources/views/layout/base.twig
+++ b/src/Resources/views/layout/base.twig
@@ -30,8 +30,8 @@
             {% endblock %}
         {% endblock %}
         {% block javascript %}
-            <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-            <script src="/js/app.js"></script>
+            <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+            <script src="/js/app.min.js"></script>
         {% endblock %}
         {% block dataLayer %}{% endblock %}
     </body>
