Updated texts and fixed bg bug

--- a/src/Resources/views/pages/index.twig
+++ b/src/Resources/views/pages/index.twig
@@ -16,14 +16,12 @@
                 icon: 'logo',
                 svgClass: 'index__logo'
             } %}#}
-            <h1 class="index__title">Chanante ipsum dolor sit amet, eiusmod ahí va qué  moreno ut
-                exercitation fresquete ut cosica veniam. Droja ex saepe magna, labore mangurrián ea elit nostrud dolore.
-                Ut mamellas eveniet cacahué dolore.</h1>
-            <p class="index__subtitle">Entérate el primero de su lanzamiento</p>
+            <h1 class="index__title">Modern project manager for software development.</h1>
+            <p class="index__subtitle">Subscribe to our newsletter</p>
             <form class="index__subscribe">
                 <div class="index__subscribe-fields">
-                    <input class="index__email" type="email" placeholder="Tu email"/>
-                    <input class="index__submit" type="submit" value="Apuntarme!"/>
+                    <input class="index__email" type="email" placeholder="Your email"/>
+                    <input class="index__submit" type="submit" value="Submit"/>
                 </div>
             </form>
             <img class="index__loading" src="/images/spin.svg"/>
@@ -38,7 +36,7 @@
         </div>
     </div>
     <div class="index__follow">
-        <span>Síguenos:</span>
+        <span>Follow us:</span>
         <a class="index__follow-link" href="http://twitter.com/kreta_io">
             {% include 'component/svg_icon.twig' with {
                 icon: 'twitter',
