--- a/src/Resources/views/pages/index.twig
+++ b/src/Resources/views/pages/index.twig
@@ -12,10 +12,7 @@
         </picture>
 
         <div class="index__caption">
-            {#{% include 'component/svg_icon.twig' with {
-                icon: 'logo',
-                svgClass: 'index__logo'
-            } %}#}
+            <img class="index__logo" src="/images/logo.svg"/>
             <h1 class="index__title">Modern project manager for software development.</h1>
             <p class="index__subtitle">Subscribe to our newsletter</p>
             <form class="index__subscribe">
