--- a/src/Resources/assets/scss/page/_index.scss
+++ b/src/Resources/assets/scss/page/_index.scss
@@ -21,15 +21,14 @@
 
 .index__logo {
   fill: $white;
-  height: 160px;
-  margin-bottom: -37px;
-  width: 300px;
+  height: 90px;
+  width: 314px;
 }
 
 .index__title {
   color: $white;
   font-size: 18px;
-  margin-bottom: 60px;
+  margin: 50px 0;
   text-align: center;
   text-transform: none;
 }
