--- a/src/Resources/assets/scss/page/_index.scss
+++ b/src/Resources/assets/scss/page/_index.scss
@@ -47,11 +47,11 @@
 .index__email {
   border: 0;
   border-radius: 3px 0 0 3px;
+  flex: 1;
   font-family: $body-font-family;
   font-size: 16px;
   height: 40px;
   padding: 0 10px;
-  width: 100%;
 
   &:focus {
     outline: 0;
